Fix: Fix error with Availability not showing correctly

--- a/booking/static/booking/css/booking_styles.css
+++ b/booking/static/booking/css/booking_styles.css
@@ -3,3 +3,24 @@
 .border-selected {
     border: 3px solid #ff0000 !important; /* Bootstrap warning color */
 }
+
+.table td, .table th {
+    vertical-align: middle;
+}
+
+.action-cell {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.action-cell > div {
+    flex: 1;
+    display: flex;
+}
+
+.action-cell > div > button {
+    flex: 1;
+    width: 100%;
+    border-radius: 0;
+}
